--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,22 +1,70 @@
-<%layout('layouts/boilerplate') %>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Yelp Camp</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/stylesheets/home.css">
+</head>
+<body class="d-flex text-center text-white bg-dark">
+    <div class="cover-container d-flex flex-column mx-auto w-100 h-100 justify-content-between">
+        <header>
+            <div>
+                <nav class="navbar navbar-expand-lg w-100" style="background-color: transparent;">
+                    <div class="container-fluid">
+                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                      </button>
+                      <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                        <a class="navbar-brand" href="#"><h3 class="text-white">YelpCamp</h3></a>
+                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                          <li class="nav-item">
+                            <a class="nav-link active text-white" href="#">Home</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="/campgrounds">Campgrounds</a>
+                          </li>
+                          <% if(!currentUser) { %>
+                          <li class="nav-item">
+                            <a class="nav-link" href="/login">Login</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="/register">Register</a>
+                          </li>
+                          <% } else { %>
+                          <li class="nav-item">
+                            <a class="nav-link" href="/logout">Logout</a>
+                          </li>
+                          <% } %>
 
-<h1 class="text-center">YELP-CAMP</h1>
-<div class="row my-3">
-    <div class="col-6 offset-3">
-        <div class="card mb-3">
-            <div class="card-body">
-                <img src="https://source.unsplash.com/collection/483251" class="card-img-top" alt="...">
-                <h5 class="card-title">
-                  WELCOME
-                </h5>
-                <p class="card-text">
-                  ENJOY THE BEST ADVENTURE THIS SUMMER!!!
-                </p>
+                        </ul>
+                      </div>
+                    </div>
+                  </nav>
             </div>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item"><a href="/campgrounds" class="card-link btn btn-dark btn-sm">All campgrounds</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</div>
+        </header>
+
+        <main>
+            <h1>Yelp Camp</h1>
+            <p class="lead"> Welcome to YelpCamp! <br> Jump right in and explore our many campgrounds. <br>
+                Feel free to share some of your own and comment on others!</p>
+            <a href="/campgrounds" class="btn btn-lg btn-secondary font-weight-bold border-white bg-white">View
+                Campgrounds</a>
+        </main>
+
+        <footer>
+            <p>&copy; 2023 </p>
+        </footer>
+    </div>    
+
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+        integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
+        crossorigin="anonymous"></script>
+</body>
+</html>
