--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,8 +1,9 @@
 <% layout('layouts/boilerplate') %>
 
-    <div class="row  my-5">
-        <div class="col-4 mx-auto">
+    <div class="row justify-content-center mb-3">
+        <div class="col-4">
             <div class="card">
+                <img class="card-img-top" src="https://images.unsplash.com/photo-1469474968028-56623f02e42e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8bmF0dXJlfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" alt="">
                 <div class="card-body">
                     
                     <h2 class="card-title text-center mb-3">Login</h2>
@@ -10,7 +11,7 @@
 
                         <div class="mb-4">
                             <label class="form-label" for="username">Username</label>
-                            <input class="form-control" type="text" id="username" name="username" required>
+                            <input class="form-control" type="text" id="username" name="username" required autofocus>
                             <div class="valid-feedback">
                                 Looks good!
                             </div>
